--- a/paginas/sobre-nosotros.html
+++ b/paginas/sobre-nosotros.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-utilities.css">
     <title>Sobre nosotros</title>
 </head>
     <body>
@@ -83,6 +85,11 @@
     </main>
     <div class="clearfix"></div>
 <footer>
+    <footer class="footer__redes">
+        <img class="footer__redes" src="../recursos/redes/instagram-brands.svg" alt="logo instagram">
+        <img class="footer__redes" src="../recursos/redes/facebook-brands.svg" alt="logo facebook">
+        <img class="footer__redes" src="../recursos/redes/twitter-square-brands.svg" alt="logo twitter">
+        <div>
 <p>Todos los derechos reservados ifio94 coorp &copy; 2022</p>
 </footer>
 </div>
