--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los mejores eventos</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-utilities.css">
+    <link rel="shortcut icon" href="../PROYECTO/favicon-16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
         <body>
             <div id="container"></div>
@@ -73,9 +77,14 @@
                     <div class="clearfix"></div>
             </main>
         <span>Hoy es un gran dia</span>
-        <footer>
+        <footer class="footer">
+        <img class="footer__redes" src="../PROYECTO/recursos/redes/instagram-brands.svg" alt="logo instagram">
+        <img class="footer__redes" src="../PROYECTO/recursos/redes/facebook-brands.svg" alt="logo facebook">
+        <img class="footer__redes" src="../PROYECTO/recursos/redes/twitter-square-brands.svg" alt="logo twitter">
+        <div>
         <p>Todos los derechos reservados ifio94 coorp &copy; 2022</p>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         </body>
 </html>
