--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-utilities.css">
     <title>Contactanos</title>
 </head>
     <body>
@@ -39,6 +41,36 @@
                             de los trenes, de los cruceros transatlánticos, de los acorazados, de los automóviles y aeroplanos.<br />
                             </p>
                         </article>
+                        <section class="container-fluid ">
+                            <div class="row">
+                                <div class="col">
+                                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                        <div class="carousel-indicators">
+                                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                        </div>
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                            <img src="../recursos/publico.jpg" class="d-block w-100" alt="conejo con flor rosa">
+                                            </div>
+                                            <div class="carousel-item">
+                                            <img src="" class="d-block w-100" alt="...">
+                                            </div>
+                                            <div class="carousel-item">
+                                            <img src="" class="d-block w-100" alt="...">
+                                            </div>
+                                        </div>
+                                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
+                                        </div>
+                                </div>
                         <div class="flex-container">
                             <div>TODAY</div>
                             <div>TODAY</div>
@@ -88,6 +120,11 @@
             <div class="clearfix"></div>
             </main>
         <footer>
+            <footer class="footer__redes">
+                <img class="footer__redes" src="../recursos/redes/instagram-brands.svg" alt="logo instagram">
+                <img class="footer__redes" src="../recursos/redes/facebook-brands.svg" alt="logo facebook">
+                <img class="footer__redes" src="../recursos/redes/twitter-square-brands.svg" alt="logo twitter">
+                <div>
         <p>Todos los derechos reservados ifio94 coorp &copy; 2022</p>
         </footer>
         </div>
