--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap-utilities.css">
     <link rel="shortcut icon" href="../PROYECTO/favicon-16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script defer src="stock.js"></script>
+    <script defer src="modal.js"></script>
+    <script defer src="index.js"></script>
     </head>
         <body>
             <div id="container"></div>
@@ -41,6 +44,26 @@
             <article class="article">
             <h2>El mejor evento</h2>
             <img src="recursos/publico.jpg" alt="foto screen">
+            
+            <h1 id="titulo" class="titulo">Los mejores festivales</h1>
+            <button id="boton-carrito"><i class="fas fa-shopping-cart"></i><span id="contadorCarrito">0</span></button>
+            
+            <select id="filtroTipo">
+                <option value="Paquete">Paquete</option>
+                <option value="VIP">VIP</option>
+                <option value="Membresia">Membresia</option>
+                <option value="Entrada">Entrada</option>
+            </select>
+            <main id="contenedor-productos"></main>
+            <div class="modal-contenedor">
+                <div class="modal-carrito">
+                    <h3>Carrito</h3>
+                    <button id="carritoCerrar"><i class="fas fa-times-circle"></i></button>
+                    <div id="carrito-contenedor">
+                    </div>
+                    <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
+                    <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
+                </div>
             </article>
             <section id="direccion">
                 <h2>Donde estamos</h2>
@@ -86,5 +109,6 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
         </body>
 </html>
