--- a/paginas/entradas.html
+++ b/paginas/entradas.html
@@ -100,5 +100,6 @@
 <p>Todos los derechos reservados ifio94 coorp &copy; 2022</p>
 </footer>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
