--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                     <button id="carritoCerrar"><i class="fas fa-times-circle"></i></button>
                     <div id="carrito-contenedor">
                     </div>
-                    <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
+                    
+                    <div class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
                     <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
                 </div>
             </article>
