--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                     Mas alla del sol.
                 </div>
                 </article>
+                <body> 
+                    <button id="myBtn">Click me</button>
+                    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                    <script src="index.js"></script>
+                </body>
+                
                 <div class="flex-container">
                     <div>AYER</div>
                     <div>HOY</div>
@@ -111,5 +117,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.4/underscore-umd-min.js"></script>
         </body>
 </html>
